fix: Fix flickering of page transition animation when switching languages in i18n & reduce and correct some CSS.

--- a/assets/main.css
+++ b/assets/main.css
@@ -104,7 +104,7 @@ html:not(.dark) [img-dark] {
 @media (prefers-reduced-motion: no-preference) {
   html:not(.no-sliding) [slide-enter],
   html:not(.no-sliding) .slide-enter,
-  html:not(.no-sliding) .slide-enter-content > *:not(:has(.table-of-contents)) {
+  html:not(.no-sliding) [data-content-id] > *:not(:has(.table-of-contents)) {
     --enter-stage: 0;
     --enter-step: 90ms;
     --enter-initial: 0ms;
@@ -112,64 +112,64 @@ html:not(.dark) [img-dark] {
     animation-delay: calc(var(--enter-initial) + var(--enter-stage) * var(--enter-step));
   }
 
-  .slide-enter-content > *:nth-child(1) {
+  [data-content-id] > *:nth-child(1) {
     --enter-stage: 1 !important;
   }
-  .slide-enter-content > *:nth-child(2) {
+  [data-content-id] > *:nth-child(2) {
     --enter-stage: 2 !important;
   }
-  .slide-enter-content > *:nth-child(3) {
+  [data-content-id] > *:nth-child(3) {
     --enter-stage: 3 !important;
   }
-  .slide-enter-content > *:nth-child(4) {
+  [data-content-id] > *:nth-child(4) {
     --enter-stage: 4 !important;
   }
-  .slide-enter-content > *:nth-child(5) {
+  [data-content-id] > *:nth-child(5) {
     --enter-stage: 5 !important;
   }
-  .slide-enter-content > *:nth-child(6) {
+  [data-content-id] > *:nth-child(6) {
     --enter-stage: 6 !important;
   }
-  .slide-enter-content > *:nth-child(7) {
+  [data-content-id] > *:nth-child(7) {
     --enter-stage: 7 !important;
   }
-  .slide-enter-content > *:nth-child(8) {
+  [data-content-id] > *:nth-child(8) {
     --enter-stage: 8 !important;
   }
-  .slide-enter-content > *:nth-child(9) {
+  [data-content-id] > *:nth-child(9) {
     --enter-stage: 9 !important;
   }
-  .slide-enter-content > *:nth-child(10) {
+  [data-content-id] > *:nth-child(10) {
     --enter-stage: 10 !important;
   }
-  .slide-enter-content > *:nth-child(11) {
+  [data-content-id] > *:nth-child(11) {
     --enter-stage: 11 !important;
   }
-  .slide-enter-content > *:nth-child(12) {
+  [data-content-id] > *:nth-child(12) {
     --enter-stage: 12 !important;
   }
-  .slide-enter-content > *:nth-child(13) {
+  [data-content-id] > *:nth-child(13) {
     --enter-stage: 13 !important;
   }
-  .slide-enter-content > *:nth-child(14) {
+  [data-content-id] > *:nth-child(14) {
     --enter-stage: 14 !important;
   }
-  .slide-enter-content > *:nth-child(15) {
+  [data-content-id] > *:nth-child(15) {
     --enter-stage: 15 !important;
   }
-  .slide-enter-content > *:nth-child(16) {
+  [data-content-id] > *:nth-child(16) {
     --enter-stage: 16 !important;
   }
-  .slide-enter-content > *:nth-child(17) {
+  [data-content-id] > *:nth-child(17) {
     --enter-stage: 17 !important;
   }
-  .slide-enter-content > *:nth-child(18) {
+  [data-content-id] > *:nth-child(18) {
     --enter-stage: 18 !important;
   }
-  .slide-enter-content > *:nth-child(19) {
+  [data-content-id] > *:nth-child(19) {
     --enter-stage: 19 !important;
   }
-  .slide-enter-content > *:nth-child(20) {
+  [data-content-id] > *:nth-child(20) {
     --enter-stage: 20 !important;
   }
 }
@@ -216,12 +216,22 @@ html:not(.dark) [img-dark] {
 }
 
 /* Transitions */
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity 0.2s ease;
+.page-enter-active,
+.page-leave-active {
+  transition: all 0.4s;
+}
+.page-enter-from,
+.page-leave-to {
+  opacity: 0;
+  filter: blur(0.24rem) grayscale(0.8);
 }
 
-.fade-enter-from,
-.fade-leave-to {
-  opacity: 0;
+/* .layout-enter-active,
+.layout-leave-active {
+  transition: all 0.4s;
 }
+.layout-enter-from,
+.layout-leave-to {
+  opacity: 0;
+  filter: blur(0.24rem) grayscale(0.8);
+} */
