--- a/assets/markdown.css
+++ b/assets/markdown.css
@@ -1,28 +1,3 @@
-html {
-  background-color: var(--clr-bg);
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
-
-::selection {
-  background: #8884;
-}
-
-#nprogress {
-  pointer-events: none;
-}
-
-#nprogress .bar {
-  background: #888;
-  opacity: 0.75;
-  position: fixed;
-  z-index: 1031;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-}
-
 * {
   scrollbar-color: var(--clr-scrollbar) var(--clr-bg);
 }
@@ -80,10 +55,6 @@ html:not(.dark) .shiki span {
   margin: 0.5em 0;
 }
 
-.prose img {
-  width: 100%;
-}
-
 .prose p > img {
   width: 100%;
   --uno: shadow rounded-lg;
@@ -100,24 +71,8 @@ html:not(.dark) .shiki span {
   color: var(--fg);
 }
 
-.prose a {
-  font-weight: inherit;
-  text-decoration: none;
-  border-bottom: 1px solid rgba(125, 125, 125, 0.3);
-  transition: border 0.3s ease-in-out;
-}
-
 .prose a:hover {
   border-bottom: 1px solid var(--fg);
-}
-
-.prose a code {
-  color: inherit;
-}
-
-.prose hr {
-  width: 50px;
-  margin: 2em auto;
 }
 
 html.dark .prose {
@@ -205,282 +160,4 @@ h6:focus .header-anchor {
   --uno: font-serif;
   color: var(--fg-deep);
   font-size: 1.05em;
-}
-
-/* Sponsorkit */
-.sponsorkit-avatar {
-  cursor: pointer;
-}
-.sponsorkit-tier-title {
-  font-weight: 600;
-  font-size: 20px;
-  fill: currentColor;
-}
-.sponsorkit-name {
-  font-weight: 300;
-  font-size: 15px;
-  transform: translateY(8px);
-}
-
-::-webkit-scrollbar {
-  width: 6px;
-}
-::-webkit-scrollbar:horizontal {
-  height: 6px;
-}
-::-webkit-scrollbar-track,
-::-webkit-scrollbar-corner {
-  background: var(--c-bg);
-  border-radius: 10px;
-}
-::-webkit-scrollbar-thumb {
-  background: var(--clr-scrollbar);
-  border-radius: 10px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: var(--clr-scrollbar-hover);
-}
-
-h2 + p > em:first-child {
-  opacity: 0.5;
-  display: block;
-  margin-top: -20px;
-  font-size: 0.9em;
-}
-
-.dark [img-light] {
-  display: none;
-}
-
-html:not(.dark) [img-dark] {
-  display: none;
-}
-
-@keyframes slide-enter {
-  0% {
-    transform: translateY(10px);
-    opacity: 0;
-  }
-
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  html:not(.no-sliding) [slide-enter],
-  html:not(.no-sliding) .slide-enter,
-  html:not(.no-sliding) .slide-enter-content > *:not(:has(.table-of-contents)) {
-    --enter-stage: 0;
-    --enter-step: 90ms;
-    --enter-initial: 0ms;
-    animation: slide-enter 1s both 1;
-    animation-delay: calc(var(--enter-initial) + var(--enter-stage) * var(--enter-step));
-  }
-
-  .slide-enter-content > *:nth-child(1) {
-    --enter-stage: 1 !important;
-  }
-  .slide-enter-content > *:nth-child(2) {
-    --enter-stage: 2 !important;
-  }
-  .slide-enter-content > *:nth-child(3) {
-    --enter-stage: 3 !important;
-  }
-  .slide-enter-content > *:nth-child(4) {
-    --enter-stage: 4 !important;
-  }
-  .slide-enter-content > *:nth-child(5) {
-    --enter-stage: 5 !important;
-  }
-  .slide-enter-content > *:nth-child(6) {
-    --enter-stage: 6 !important;
-  }
-  .slide-enter-content > *:nth-child(7) {
-    --enter-stage: 7 !important;
-  }
-  .slide-enter-content > *:nth-child(8) {
-    --enter-stage: 8 !important;
-  }
-  .slide-enter-content > *:nth-child(9) {
-    --enter-stage: 9 !important;
-  }
-  .slide-enter-content > *:nth-child(10) {
-    --enter-stage: 10 !important;
-  }
-  .slide-enter-content > *:nth-child(11) {
-    --enter-stage: 11 !important;
-  }
-  .slide-enter-content > *:nth-child(12) {
-    --enter-stage: 12 !important;
-  }
-  .slide-enter-content > *:nth-child(13) {
-    --enter-stage: 13 !important;
-  }
-  .slide-enter-content > *:nth-child(14) {
-    --enter-stage: 14 !important;
-  }
-  .slide-enter-content > *:nth-child(15) {
-    --enter-stage: 15 !important;
-  }
-  .slide-enter-content > *:nth-child(16) {
-    --enter-stage: 16 !important;
-  }
-  .slide-enter-content > *:nth-child(17) {
-    --enter-stage: 17 !important;
-  }
-  .slide-enter-content > *:nth-child(18) {
-    --enter-stage: 18 !important;
-  }
-  .slide-enter-content > *:nth-child(19) {
-    --enter-stage: 19 !important;
-  }
-  .slide-enter-content > *:nth-child(20) {
-    --enter-stage: 20 !important;
-  }
-}
-
-::view-transition-old(root),
-::view-transition-new(root) {
-  animation: none;
-  mix-blend-mode: normal;
-}
-::view-transition-old(root) {
-  z-index: 1;
-}
-::view-transition-new(root) {
-  z-index: 9999;
-}
-.dark::view-transition-old(root) {
-  z-index: 9999;
-}
-.dark::view-transition-new(root) {
-  z-index: 1;
-}
-
-/* Overrides Floating Vue */
-.v-popper--theme-dropdown .v-popper__inner,
-.v-popper--theme-tooltip .v-popper__inner {
-  --at-apply: bg-base text-base text-base rounded border border-base shadow;
-  box-shadow: 0 6px 30px #0000001a;
-}
-
-.v-popper--theme-tooltip .v-popper__arrow-inner,
-.v-popper--theme-dropdown .v-popper__arrow-inner {
-  visibility: visible;
-  --at-apply: border-white dark-border-black;
-}
-
-.v-popper--theme-tooltip .v-popper__arrow-outer,
-.v-popper--theme-dropdown .v-popper__arrow-outer {
-  --at-apply: border-base;
-}
-
-.v-popper--theme-tooltip.v-popper--shown,
-.v-popper--theme-tooltip.v-popper--shown * {
-  transition: none !important;
-}
-
-/* Transitions */
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity 0.2s ease;
-}
-
-.fade-enter-from,
-.fade-leave-to {
-  opacity: 0;
-}
-
-/* Table of Contents */
-.table-of-contents {
-  position: fixed;
-  top: 90px;
-  bottom: 0;
-  font-size: 0.8em;
-  left: 20px;
-  z-index: 200;
-  overflow: hidden;
-  --uno: hidden lg-flex flex-col w-100px lg-w-200px xl-w-300px;
-}
-
-.table-of-contents-anchor {
-  --uno: mx2 w-7 h-7 text-lg flex items-center justify-center bg-base rounded text-hex-8887 border border-base shadow md:
-    border-transparent md: shadow-none transition duration-400;
-}
-
-.table-of-contents > ul {
-  text-overflow: ellipsis;
-  height: 100%;
-  overflow-y: auto;
-  --uno: rounded op0 mt-1 pb-5 transition duration-700;
-}
-
-*:hover > .table-of-contents > .table-of-contents-anchor,
-.toc-always-on .table-of-contents > .table-of-contents-anchor {
-  --uno: text-inherit;
-}
-
-.toc-always-on .table-of-contents > ul {
-  opacity: 0.6;
-}
-
-*:hover > .table-of-contents > ul {
-  opacity: 0.75;
-}
-
-.table-of-contents ul > li::before {
-  display: none;
-}
-
-.table-of-contents ul > li {
-  padding-left: 0.8rem;
-  line-height: 1.5em;
-  margin-top: 0.5em;
-}
-
-.table-of-contents ul > li > a {
-  --uno: op75 hover-op100 transition;
-}
-
-/* Markdown Magic Link */
-.code-wrap .line {
-  white-space: break-spaces;
-}
-
-.markdown-magic-link {
-  display: inline-flex;
-  align-items: center;
-  background: #8882;
-  transform: translateY(3px);
-  line-height: 100%;
-  color: var(--fg-light) !important;
-  --uno: gap-1 transition rounded px1.5 py1 important-border-0 font-condensed;
-}
-
-.markdown-magic-link:hover {
-  background: #8883;
-  color: var(--fg) !important;
-}
-
-.markdown-magic-link-image {
-  display: inline-block;
-  height: 1.1em;
-  width: 1.1em;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 2px;
-}
-
-.markdown-magic-link.markdown-magic-link-github-at {
-  transform: translateY(6px);
-  --uno: pl-0 py-0 pr2 text-sm gap-1.2 rounded-full;
-}
-
-.markdown-magic-link.markdown-magic-link-github-at .markdown-magic-link-image {
-  height: 1.6em;
-  width: 1.6em;
-  border-radius: 50%;
 }
