--- a/assets/prose.css
+++ b/assets/prose.css
@@ -1,5 +1,4 @@
 .prose {
-  color: var(--fg);
   max-width: 65ch;
   font-size: 1rem;
   line-height: 1.75;
@@ -15,6 +14,9 @@
   color: var(--fg-deeper);
   text-decoration: none;
   font-weight: 500;
+  font-weight: inherit;
+  border-bottom: 1px solid rgba(125, 125, 125, 0.3);
+  transition: border 0.3s ease-in-out;
 }
 .prose strong {
   color: var(--fg-deep);
@@ -74,8 +76,8 @@
 }
 .prose hr {
   border-color: rgba(125, 125, 125, 0.3);
-  margin-top: 3em;
-  margin-bottom: 3em;
+  width: 50px;
+  margin: 3em auto;
 }
 .prose blockquote {
   font-weight: 500;
@@ -216,6 +218,7 @@
   margin-bottom: 1.25em;
 }
 .prose img {
+  width: 100%;
   margin-top: 2em;
   margin-bottom: 2em;
 }
